spade-macros/tests/into_diagnostic/ui/wrong_inner_attribute_format.stderr
error: inner attribute is malformed
       expected #[diagnostic(<primary/secondary>, <MESSAGE...>)]
 --> tests/into_diagnostic/ui/wrong_inner_attribute_format.rs:6:5
  |
6 |     #[diagnostic(primary, <=>)]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: inner attribute is malformed
       expected #[diagnostic(<primary/secondary>, <MESSAGE...>)]
  --> tests/into_diagnostic/ui/wrong_inner_attribute_format.rs:15:5
   |
15 |     #[diagnostic(secondary, ::<>)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
